--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,9 @@
   "image": "mcr.microsoft.com/dotnet/sdk:8.0",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/powershell:1": {
+			"version": "7.4.2"
+		},
     "ghcr.io/devcontainers/features/github-cli:1": {
       "version": "2"
     },
